# libvmod-sqlite3

./: .gitignore  .travis.yml  CHANGES.rst  README.md  README.rst  configure.ac  vmod-sqlite3.spec
src/: Makefile.am  vmod.vcc  vmod_sqlite3.c
src/tests/: 00002.vtc  b00000.vtc  b00001.vtc  b00002.vtc  r00001.vtc  r00002.vtc
